end of day, made prettier

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -46,10 +46,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="{% url 'index' %}">Home</a></li>
           <li><a class="nav-link scrollto" href="#search">Search</a></li>
           <li><a class="nav-link scrollto" href="#browse">Browse</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#about">About</a></li>
 
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -58,28 +57,11 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center">
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          
-          <h2>Database of Early English Playbooks (DEEP) allows scholars and students to investigate the publishing, printing, and marketing of English Renaissance drama in ways not possible using any other print or electronic resource. An easy-to-use and highly customizable search engine of every playbook produced in England, Scotland, and Ireland from the beginning of printing through 1660, DEEP provides a wealth of information about the original playbooks, their title-pages, paratextual matter, advertising features, bibliographic details, and theatrical backgrounds.</h2>
-          <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2 hero-img ">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/The_Globe_1_%285135787489%29.jpg" class="img-fluid" alt="">
-        </div>
-      </div>
-    </div>
-
-  </section><!-- End Hero -->
-
+  
   <main id="main">
 <!-- ======= Search Section ======= -->
 <section id="search" class="services section-bg">
-  <div class="container">
+  <div style="margin-top:80px;" class="container">
 
     <div class="section-title">
       <h2>Search</h2>
@@ -162,14 +144,34 @@
 
 
     
-    
+    <section id="about" class="team section-bg">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <p></p>
+            <h2>About</h2>
+            <p></p>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+            
+            <p>Database of Early English Playbooks (DEEP) allows scholars and students to investigate the publishing, printing, and marketing of English Renaissance drama in ways not possible using any other print or electronic resource. An easy-to-use and highly customizable search engine of every playbook produced in England, Scotland, and Ireland from the beginning of printing through 1660, DEEP provides a wealth of information about the original playbooks, their title-pages, paratextual matter, advertising features, bibliographic details, and theatrical backgrounds.</p>
+           
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2 hero-img ">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/The_Globe_1_%285135787489%29.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+    </section>
 
    
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container">
+    <section id="about" class="team section-bg">
+      
 
-        <div class="section-title">
+        <div style="margin-top: 5px;" class="section-title">
+          <p></p>
           <h2>Team</h2>
           <p></p>
         </div>
