working on migration from old database, new models based on DEEP Fields doc

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -155,7 +155,29 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
             
             <p>Database of Early English Playbooks (DEEP) allows scholars and students to investigate the publishing, printing, and marketing of English Renaissance drama in ways not possible using any other print or electronic resource. An easy-to-use and highly customizable search engine of every playbook produced in England, Scotland, and Ireland from the beginning of printing through 1660, DEEP provides a wealth of information about the original playbooks, their title-pages, paratextual matter, advertising features, bibliographic details, and theatrical backgrounds.</p>
-           
+  
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2 hero-img ">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/The_Globe_1_%285135787489%29.jpg" class="img-fluid" alt="">
+          </div>
+        </div>
+        <div class="row">
+          <div class="section-title">
+            <p></p>
+            <h2>History</h2>
+            <p></p>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+            
+            <p>In 1999, while graduate students in English Literature at Columbia University, we created the original, quite different version of DEEP, which “lived” only on our own computers, because we wanted to answer some questions we had about the marketing of authorship and theatricality on the title pages of early modern English playbooks. Since then, we have updated the database continuously, adding new information as our research moved into new areas and new questions arose.
+
+            Beginning in 2005, we have worked with web designers and programmers to convert this database into a web resource so that all scholars and students can have access to it. Along the way, DEEP has been generously funded by the Campus Research Board at the University of Illinois, Urbana-Champaign, the School of Arts and Sciences at the University of Pennsylvania, and Penn's Schoenberg Center For Electronic Text and Image (SCETI).
+            
+            Much of the site development and the original coding was done by David Cross at the University of Illinois, where Traci Vaughan developed the visual design for the site, and Sara Long was the graphic designer. Three computer programmers at the University of Pennsylvania--Brian Kirk, Pan Thomakos, and Michajlo Matijkiw--transformed the database to its current form, greatly enhancing and improving its functionality. David McKnight, Director of SCETI, coordinated the project and helped with funding.
+            
+            DEEP went “live” in November, 2007. Please contact us with any suggestions for the site or corrections to the data. We are eager to get your feedback so that we can continue to improve the site.
+            -Alan B. Farmer and Zachary Lesser</p>
+            
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img ">
             <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/The_Globe_1_%285135787489%29.jpg" class="img-fluid" alt="">
