--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -61,6 +61,9 @@
 
   
   <main id="main">
+
+   
+
 <!-- ======= Search Section ======= -->
 <section id="search" class="services section-bg">
   <div style="margin-top:80px;" class="container">
@@ -127,9 +130,7 @@
 </section><!-- End Search Section -->
 
   
-    
-    
-    
+  
     
     
 
@@ -141,6 +142,8 @@
  
   </footer><!-- End Footer -->
 
+
+  
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
@@ -150,13 +153,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   <script src="https://unpkg.com/lunr/lunr.js"></script>
- <script>
   
+ <script>
 // you should get the data from JSON and use it to build option tag to let the normal filter works. 
 
   $('#titles').select2({
   ajax: {
+    {% if build %}
+    url: "../assets/data/items.json",
+    {% else %}
     url: "{% url 'title_autocomplete' %}",
+    {% endif %}
+
     dataType: 'json'
     // Additional AJAX parameters go here; see the end of this chapter for the full code of this example
   }
@@ -167,7 +175,11 @@ $('#titles').on('select2:select', function(e) {
   
 $('#author').select2({
   ajax: {
+    {% if build %}
+    url: "../assets/data/authors.json",
+    {% else %}
     url: "{% url 'person_autocomplete' %}",
+    {% endif %}
     dataType: 'json'
     // Additional AJAX parameters go here; see the end of this chapter for the full code of this example
   }
@@ -178,7 +190,11 @@ $('#author').on('select2:select', function(e) {
 
 $('#theater').select2({
   ajax: {
+    {% if build %}
+    url: "../assets/data/theater.json",
+    {% else %}
     url: "{% url 'theater_autocomplete' %}",
+    {% endif %}
     dataType: 'json'
     // Additional AJAX parameters go here; see the end of this chapter for the full code of this example
   }
@@ -248,12 +264,17 @@ function search() {
             .querySelector("#results")
             .appendChild(
               htmlToElement(
-                `<div id="${search_results[i].ref}" style="border: 1px inset rgba(95,81,164,0.26); border-radius: 20px; padding:50px;">
+                `<div onclick="showModal(${search_results[i].ref});" id="${search_results[i].ref}" style="border: 1px inset rgba(95,81,164,0.26); border-radius: 20px; padding:50px;">
                 <div class="row">
-                  <h4>${data['author']} ${data['title']}</h4>
-                <ul>
-                  <li>${data['year']}</li>
-                </ul>
+                  <div class="col-lg-8 col-md-4">
+                  <h4>${data['title']}</h4>
+                  </div>
+                  <div class="col-lg-2">
+                  <h6>${data['year']}</h6>
+                  </div>
+                  <div class="col-lg-2">
+                  <h6>${data['greg_full']}</h6>
+                  </div>
                 </div>
                 </div>`
               )
@@ -270,6 +291,14 @@ function search_bar() {
   if (event.keyCode === 13) { 
     search();
   }
+}
+
+function showModal(id) {
+  let data = ItemData[id];
+  console.log(data);
+  //document.querySelector('#deepModal').on('show.bs.modal', function (event) {
+  // })
+
 }
 
  </script>
