shifting from Lunr to DataTables

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -1,6 +1,6 @@
  {% extends 'base.html' %}
 {% block content %}
- <section style="margin-top:100px;" id="about" class="team section-bg">
+ <section style="margin-top:100px; background-color: white;" id="about" class="team section-bg">
       <div class="container">
         <div class="row">
           <div class="section-title">
@@ -17,14 +17,14 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/The_Globe_1_%285135787489%29.jpg" class="img-fluid" alt="">
           </div>
         </div>
-        <div style="margin-top:100px" class="row">
+        <div style="margin-top:100px;" class="row">
           <div class="section-title">
             <p></p>
             <h2>History</h2>
             <p></p>
           </div>
           <div class="col-lg-6 order-1 order-lg-1 hero-img ">
-            <img src="http://shakespeareandbeyond.folger.edu/wp-content/uploads/sites/5/2019/01/017321.jpg" class="img-fluid" alt="">
+            <img src="https://shakespeareandbeyond.folger.edu/wp-content/uploads/sites/5/2019/01/017321.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-2 d-flex flex-column justify-content-center">
             
@@ -51,7 +51,7 @@
 
         <div style="margin-top: 5px;" class="section-title">
           <p></p>
-          <h2>Team</h2>
+          <h2 style="color:white;">Team</h2>
           <p></p>
         </div>
 
