--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -28,6 +28,7 @@
   
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.typekit.net/nlx7xjv.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
   {% block extra_css %}{% endblock %}
   <!-- =======================================================
   * Template Name: Butterfly - v4.7.0
@@ -83,7 +84,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://unpkg.com/lunr/lunr.js"></script>
-
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
     {% block extra_js %}{% endblock %}
 
 </body>
