--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -352,7 +352,13 @@ section {
 
 .section-bg {
   /* background-color: #f4fbfe; */
+ 
   background-color: #330e40;
+  background-image: url('../img/vines.svg');
+
+  
+  
+
 }
 
 .section-title {
