--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
+
 
 <!-- ======= Search Section ======= -->
 <section id="search" class="services section-bg">
-  <div style="margin-top:80px;" class="container">
+  <div style="margin-top:80px;" class="container" >
 
     
 
     <div class="row">
       <div class="col-lg-12 col-md-12">
         <div class="icon-box">
-          <div class="icon"><i class="bi bi-search" style="color: #330e40;"></i></div>
+          <div class="icon"><i class="bi bi-search" style="color: #330e40;" no-repeat center center fixed;"></i></div>
             <input id="search_bar" style="margin-left:10px; width:100%" type="text" name="search" placeholder="Search for a playbook...">
         
         </div>
